--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/swiper": "^5.4.3",
     "bcryptjs": "^3.0.3",
     "lucide-react": "^0.376.0",
+    "mysql2": "^3.16.1",
     "next": "14.2.3",
     "next-auth": "^4.24.13",
+    "pg": "^8.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
@@ -26,15 +28,21 @@
     "swiper": "^12.0.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/dotenv": "^6.1.1",
+    "@types/node": "^20.19.30",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^17.2.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
     "prisma": "^4.16.2",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
